--- a/研究计划.md
+++ b/研究计划.md
@@ -4,11 +4,11 @@ I'm a 3rd year MSc student majoring in Computer Science at Southeast University.
 
 ## Research background
 
-My master's thesis focuses on the distributed acceleration of super-resolution inference for live video streaming in an edge computing environment. In this application scenario, the video super-resolution model should be able of performing inference in real-time (>30FPS) with low latency (<500ms) on the support of distributed low-power computing devices, while ensuring smooth playback in the dynamic environment with varying bandwidth between computing devices. To achieve this, I have utilized various optimization strategies, including:
-1. Modification of model structure for better parallelism: Split a typical U-net-based super-resolution model VRT into independent modules to extract multi-scale information in parallel.
+My master's thesis focuses on the collaborative distributed acceleration of super-resolution inference for live video streaming in an edge computing environment. In this scenario, the video super-resolution model should be able of performing inference in real-time (>30FPS) with low latency (<500ms) on the support of distributed low-power computing devices, while ensuring smooth playback in the dynamic environment with varying bandwidth between computing devices. To achieve this, I have utilized various optimization strategies, including:
+1. Modification of model structure for better parallelism: Divide a typical U-net-based super-resolution model VRT into independent modules to extract multi-scale information in parallel.
 2. Compression of intermediate features for bandwidth saving: Reduce the dimension of intermediate features, quantize features from FLOAT64 to INT8, and compress features with H.264 video encoder.
 3. Leverage information in compressed video for smooth playback: Modify the VP9 decoder to merge the low-framerate high-resolution video (from super-resolution inference) and high-framerate low-resolution video to produce high-framerate high-resolution video.
-4. Variable frame squence length for dynamic bandwidth adaption: Dynamically adjust the sequence length of input frames to balance video quality and latency in dynamic bandwidth.
+4. Variable frame sequence length for dynamic bandwidth adaption: Dynamically adjust the sequence length of input frames to balance video quality and latency in dynamic bandwidth.
 
 ## Further research plan
 
@@ -16,13 +16,19 @@ In the experiment I conducted for my master's thesis, I obtained some intriguing
 
 ### Where does the stability of the super-resolution model come from?
 
-Super-resolution models are more stable in quantization or structure modification. We have applied FLOAT16 and INT8 quantization on the image super-resolution model ELAN and the multi-object tracking model FairMOT. The FLOAT16 quantized FairMOT reached 54% relative error, while ELAN exhibited minimal quality degradation (at most 2.23 dB PSNR drop) even with simple INT8 QAT quantization. Besides, even though the structure for multi-scale feature extraction in VRT has been divided into several independent parts and intermediate data is compressed from 120-dimensional FLOAT64 to 48-dimensional INT8, the accuracy of the model is still not compromised considerably (PSNR drop <2 dB).
+Super-resolution models are more stable in quantization or structure modification. We have applied FLOAT16 and INT8 quantization on the image super-resolution model ELAN and the multi-object tracking model FairMOT. The FLOAT16 quantized FairMOT reached 54% relative error, while ELAN exhibited minimal quality degradation (at most 2.23 dB PSNR drop) even with simple INT8 QAT quantization. Besides, even though the structure for multi-scale feature extraction in VRT has been divided into several independent modules and intermediate features are compressed from 120-dimensional FLOAT64 to 48-dimensional INT8, the accuracy of the model is still not compromised considerably (PSNR drop <2 dB).
 
-The above experiment result indicates that typical super-resolution models may have some unique properties or structures that make them more stable than other types of models for quantization and model structure modification. By understanding the reason of such stability, we can transfer those properties or structures to other types of neural networks and develop neural network models with enhanced stability and security.
+The above experiment result indicates that typical super-resolution models may have some unique properties or structures that make them more stable than other types of models for quantization and model structure modification. By understanding the reason for such stability, we can transfer those properties or structures to other types of neural networks and develop neural network models with enhanced stability and security.
 
 ### How does the information in compressed video correlate with super-resolution quality?
 
-There is a strong correlation between the information in the compressed video and super-resolution quality. For example, 
+There is a strong correlation between the information in the compressed video and super-resolution quality. For example, when exploring the modification of VP9 decoder to leverage information in compressed video, experiments show that the packet size of the I frames in the video clip is closely related to the super-resolution quality, while the packet size of the P frames has a greater impact on the quality of the merged output from VP9 modified decoder.
+
+If the specific correlation is understood, the adjustment granularity of the video super-resolution system can be greatly improved at a low cost. At present, most studies about leveraging information from compressed video for neural network focus on improving accuracy, but few for controlling super-resolution latency and quality.
+
+### How does the super-resolution model leverage inter-frame similarity?
+
+When investigating the dynamic adjustment mechanism for VRT, experiments show that reducing frame sequence length has little effect on the quality of the super-resolution output (length reduced from 7 to 3, PSNR decreases by <2dB, and <1dB on 1080p). This result seems to indicate that existing video super-resolution models do not effectively utilize inter-frame features but mainly produce high-resolution frames based on intra-frame features. If we can explain the specific principles by which super-resolution and related video processing models exploit the similarity between frames, we may be able to find ways to further enhance the quality of video super-resolution or improve the accuracy of other types of models.
 
 ## Why I believe you would be a suitable supervisor
 
