--- a/研究计划.md
+++ b/研究计划.md
@@ -1,18 +1,20 @@
 Dear Professor Ping Luo,
 
-I'm a 3rd year MSc student majoring in Computer Science at Southeast University. I am interested in the Ph.D. program at The University of Hong Kong, particularly the research opportunities in your group.
+I'm a 3rd year MSc student majoring in Computer Science at Southeast University. I am interested in the Ph.D. program at The University of Hong Kong, particularly the research opportunities in your group. Will you be available to supervise Ph.D. students starting in 2023 fall?
 
 ## Research background
 
-My master's thesis focuses on the collaborative distributed acceleration of super-resolution inference for live video streaming in an edge computing environment. In this scenario, the video super-resolution model should be able of performing inference in real-time (>30FPS) with low latency (<500ms) on the support of distributed low-power computing devices, while ensuring smooth playback in the dynamic environment with varying bandwidth between computing devices. To achieve this, I have utilized various optimization strategies, including:
+My master's thesis focuses on the collaborative distributed acceleration of super-resolution inference for live video streaming in an edge computing environment. In this scenario, the video super-resolution model should be able of performing inference in real-time (>30FPS) with low latency (<200ms) on the support of distributed low-power computing devices, while ensuring smooth playback in the dynamic environment with varying bandwidth between computing devices. To achieve this, I have utilized various optimization strategies, including:
 1. Modification of model structure for better parallelism: Divide a typical U-net-based super-resolution model VRT into independent modules to extract multi-scale information in parallel.
 2. Compression of intermediate features for bandwidth saving: Reduce the dimension of intermediate features, quantize features from FLOAT64 to INT8, and compress features with H.264 video encoder.
 3. Leverage information in compressed video for smooth playback: Modify the VP9 decoder to merge the low-framerate high-resolution video (from super-resolution inference) and high-framerate low-resolution video to produce high-framerate high-resolution video.
 4. Variable frame sequence length for dynamic bandwidth adaption: Dynamically adjust the sequence length of input frames to balance video quality and latency in dynamic bandwidth.
 
+The related paper "WAEVSR: Enabling collaborative live video super-resolution in wide-area MEC environment" has been submitted to WWW2023.
+
 ## Further research plan
 
-In the experiment I conducted for my master's thesis, I obtained some intriguing results and came up with some interesting research topics.
+In the experiment conducted for my master's thesis, I obtained some intriguing results and came up with some interesting research topics.
 
 ### Where does the stability of the super-resolution model come from?
 
@@ -30,6 +32,18 @@ If the specific correlation is understood, the adjustment granularity of the vid
 
 When investigating the dynamic adjustment mechanism for VRT, experiments show that reducing frame sequence length has little effect on the quality of the super-resolution output (length reduced from 7 to 3, PSNR decreases by <2dB, and <1dB on 1080p). This result seems to indicate that existing video super-resolution models do not effectively utilize inter-frame features but mainly produce high-resolution frames based on intra-frame features. If we can explain the specific principles by which super-resolution and related video processing models exploit the similarity between frames, we may be able to find ways to further enhance the quality of video super-resolution or improve the accuracy of other types of models.
 
+## Difficulties
+
+Even with the above research plan, my is still get stuck in a bottleneck. Before beginning my master's thesis, I did not anticipate that the performance of the model inference latency would be the latency bottleneck of our live video super-resolution system, and none of the typical super-resolution models (EDVR, TDAN, BasicVSR, etc) can achieve the desired latency through task scheduling and network transmission optimization (desire latency <200ms, but our modified and pruned model can only achieve <1000ms). To break through this bottleneck, model optimization is the major focus of my master's thesis, and will still be the focus of further research. However, the research group I am currently working for primarily focuses on task scheduling of edge computing and the optimization of network transmission, which cannot provide effective support for further research on model-level optimization.
+
 ## Why I believe you would be a suitable supervisor
 
-I know your research is focused on XXX, which are all challenging but attractive. I was impressed by all the work you did. This is why your lab immediately becomes my target when I make the decision to apply for PhD.
+I believe your expertise in deep learning algorithms will help me excel in this field. My proposed research also aligns well with your ongoing research agenda. I know your group research is focused on the foundation, optimization and application of deep learning algorithms and has a long-term accumulation of video processing, which can help me insight into the optimization of video super-resolution models. I was also impressed with the way some of the papers in your research group are organized. That is, taking deep insights into the foundations of the target application or existing deep learning algorithms before giving a novel algorithm. Your paper "Compressed Video Contrastive Learning" has helped me understand the content of the compressed video and how it relates to the raw video frames, and your paper "Compression of Generative Pre-trained Language Models via Quantization" has inspired me to explore the distribution of features and parameters in QAT for better quantization for my master's thesis. My further research on video super-resolution model optimization will also explore the linkage among compressed video, quantization and video super-resolution.
+
+This is why your lab immediately becomes my target when I decide to apply for Ph.D.
+
+It would be my pleasure to discuss research topics with you, as well as the value and strength I can bring.
+Please find attached CV. I look forward to hearing from you.
+
+Kind regards,
+Daheng Yin
