--- a/申请理由.md
+++ b/申请理由.md
@@ -33,7 +33,7 @@
 
 但是，我现在的研究陷入了瓶颈。模型结构上的优化成为研究课题中的主要内容并非意料之中的结果。在研究开始前，我并没有预料到超分辨率模型的计算速度是实时视频流超分辨率系统最核心的性能瓶颈，以至于单凭任务调度和网络传输优化手段完全无法做到输出低延迟实时视频流。为了突破这一瓶颈，我的主要工作重心都放在了模型优化研究方面，而逐渐偏离了任务调度和网络传输优化的“正轨”，在不断的实验中逐渐对神经网络模型的加速和优化产生了浓厚的兴趣。目前，我们构建的视频超分辨率模型在牺牲模型精度的情况下只能将计算延迟维持在1000ms左右（超分到1080p），距离近实时交互的目标（<200ms）仍有较大距离，因此模型优化仍将会是后续研究的重心。然而，我目前所在的研究组主要研究方向在边缘计算的任务调度和网络传输的优化方面，并不能给模型层面的进一步优化研究提供有效的支持。
 
-您的研究组在视频处理、模型结构设计和计算优化方面都有非常深厚的积累，对神经网络本质属性的理解也有一些非常深刻的见解。是我继续进行模型优化研究的理想去处，因此希望可以在您的研究组中有新的突破。
+您的研究组在视频处理、模型结构设计和计算优化方面都有非常深厚的积累，对神经网络本质属性的理解也有一些非常深刻的见解。您的研究组中最近发表的文章中所使用的研究方法正是我理想中的研究方式。我认为我的后续研究可以与您研究组的研究方向关系紧密，可以与您在视频处理、模型结构设计和计算优化方面的研究紧密结合。因此，您的研究组是我继续进行模型优化研究的理想去处，我希望可以在您的研究组中有新的突破。
 
 
 此致
