--- a/CV.Chinese/AI方向简历2022.tex
+++ b/CV.Chinese/AI方向简历2022.tex
@@ -244,6 +244,7 @@
 
 	\section{本科期间的竞赛和奖学金}
     \begin{tabular}{lll}
+		2020.06 & 江南大学本科优秀毕业设计 & \\
         %2019.05 & 全国大学生服务外包创新创业大赛 & 三等奖 \\
         %2019.04 & 美国大学生数学建模竞赛 & S奖 \\
         2018.09 & 全国大学生数学建模竞赛 & 国家级二等奖 \\
