--- a/CV/ai2022.tex
+++ b/CV/ai2022.tex
@@ -176,6 +176,7 @@ Blog:\href{http://www.yindaheng98.top}{\bf yindaheng98.top} \\
 
 \section{Contest \& Scholarship During Undergraduate} 
 \begin{tabular}{lll}
+    2020.06 & Outstanding Graduate of Jiangnan University & \\
     2018.09 & National College Mathematical Contest in Modeling & 2nd Prize(National) \\
     2017.11 & 9th National College Mathematical Contest & 2nd Prize(Provincial) \\
     2017.11 & China National Scholarship (2016-2017) & \\
