--- a/研究计划.md
+++ b/研究计划.md
@@ -18,7 +18,7 @@ In the experiment conducted for my master's thesis, I obtained some intriguing r
 
 ### Where does the stability of the super-resolution model come from?
 
-Super-resolution models are more stable in quantization or structure modification. We have applied FLOAT16 and INT8 quantization on the image super-resolution model ELAN and the multi-object tracking model FairMOT. The FLOAT16 quantized FairMOT reached 54% relative error, while ELAN exhibited minimal quality degradation (at most 2.23 dB PSNR drop) even with simple INT8 QAT quantization. Besides, even though the structure for multi-scale feature extraction in VRT has been divided into several independent modules and intermediate features are compressed from 120-dimensional FLOAT64 to 48-dimensional INT8, the accuracy of the model is still not compromised considerably (PSNR drop <2 dB).
+Super-resolution models are more stable in quantization or structure modification. We have applied FLOAT16 and INT8 quantization on the image super-resolution model ELAN and the multi-object tracking model FairMOT. The FLOAT16 quantized FairMOT reached 54% relative error, while ELAN exhibited minimal quality degradation (at most 2.23 dB PSNR drop) even with simple INT8 QAT quantization. Besides, even though the U-net structure for multi-scale feature extraction in VRT has been divided into several independent modules and intermediate features are compressed from 120-dimensional FLOAT64 to 48-dimensional INT8, the accuracy of the model is still not compromised considerably (PSNR drop <1 dB).
 
 The above experiment result indicates that typical super-resolution models may have some unique properties or structures that make them more stable than other types of models for quantization and model structure modification. By understanding the reason for such stability, we can transfer those properties or structures to other types of neural networks and develop neural network models with enhanced stability and security.
 
