--- a/CV.Chinese/AI方向简历2022.tex
+++ b/CV.Chinese/AI方向简历2022.tex
@@ -125,8 +125,20 @@
 	CUDA \textbullet{} TensorRT \\
 	WebRTC \textbullet{} LibVPX \\
 	Docker \textbullet{} Kubernetes \\
-	Git \textbullet{} Github \textbullet{} GitLab \\
-	\LaTeX \textbullet{} Golang \textbullet{} Java \\
+	Git \textbullet{} \LaTeX \textbullet{} \\
+	\sectionsep
+
+	\subsection{编程 {\small (代码量)}}
+	\begin{tabular}{lr}
+		Python     & 23,963 \\ % LittleProgramSet 3840 本科 3184 当前 16939
+		Golang 	   & 20,812 \\ % 毕设 9934 当前 10878
+		C/C++      & 8,478  \\ % LittleProgramSet 8360 本科 118
+		Java       & 7,309  \\ % LittleProgramSet 1298 本科 4679 毕设 1332
+		JavaScript & 4,013  \\ % 毕设 1174 当前 12200-9361
+		PHP        & 4,294  \\ % 本科 4294
+		Matlab     & 1,395  \\ % LittleProgramSet 1395
+		C\#        & 392    \\ % LittleProgramSet 392
+	\end{tabular}
 	\sectionsep
     
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
