--- a/CV/ai2022.tex
+++ b/CV/ai2022.tex
@@ -84,7 +84,7 @@
 \descript{Master of Science}
 \descript{Major: Computer Science}
 \location{2020.09$\sim$2023.06}
-\descript{GPA 3.59/4}
+\descript{GPA 81.69/100}
 \sectionsep
 \subsection{\fontsize{10pt}{10pt}\selectfont{Cambridge University}}
 \descript{Overseas study tour}
@@ -94,7 +94,7 @@
 \descript{Bachelor of Engineering}
 \descript{Major: IoT Engineering}
 \location{2016.09$\sim$2020.09}
-\descript{GPA 81.69/100}
+\descript{GPA 3.59/4}
 \sectionsep
 
 \section{English}
@@ -109,8 +109,20 @@ Pytorch \\
 CUDA \textbullet{} TensorRT \\
 WebRTC \textbullet{} LibVPX \\
 Docker \textbullet{} Kubernetes \\
-Git \textbullet{} Github \textbullet{} GitLab \\
-\LaTeX \textbullet{} Golang \textbullet{} Java \\
+Git \textbullet{} \LaTeX \\
+
+\subsection{Programming \newline{\small (Lines of code)}}
+\begin{tabular}{lr}
+    Python     & 23,963 \\ % LittleProgramSet 3840 本科 3184 当前 16939
+    Golang 	   & 20,812 \\ % 毕设 9934 当前 10878
+    C/C++      & 8,478  \\ % LittleProgramSet 8360 本科 118
+    Java       & 7,309  \\ % LittleProgramSet 1298 本科 4679 毕设 1332
+    JavaScript & 4,013  \\ % 毕设 1174 当前 12200-9361
+    PHP        & 4,294  \\ % 本科 4294
+    Matlab     & 1,395  \\ % LittleProgramSet 1395
+    C\#        & 392    \\ % LittleProgramSet 392
+\end{tabular}
+\sectionsep
 
 \section{Links}
 Github\href{https://github.com/yindaheng98}{\bf @yindaheng98} \\
