--- a/CV/ai2022.tex
+++ b/CV/ai2022.tex
@@ -87,7 +87,7 @@
 \descript{GPA 81.69/100}
 \sectionsep
 \subsection{\fontsize{10pt}{10pt}\selectfont{Cambridge University}}
-\descript{Overseas study tour}
+\descript{Visiting Student}
 \location{2017.08-2017.09}
 \sectionsep
 \subsection{Jiangnan University}
