--- a/CV.Chinese/AI方向简历2022.tex
+++ b/CV.Chinese/AI方向简历2022.tex
@@ -201,15 +201,12 @@
 
 
     \section{主要实践项目}
-	\runsubsection{\bf 竞赛 TensorRT Hackathon 2022 优胜奖}
-	\descript{2022.03$\sim$2022.5}
-	\location{NVIDIA | 阿里云天池}
+	\runsubsection{\bf 纵向课题 面向工业互联网的智能云端协作关键技术及系统}
+	\descript{2021.04$\sim$2021.09}
+	\location{国家重点研发计划 | 南京钢铁集团 | 东南大学}
 	\begin{tightemize}
-		\item 基于TensorRT对语音识别模型WeNet和超分辨率模型ELAN进行float16和int8量化加速
-		\item 编写TensorRT插件实现16位浮点型BatchNorm以替换TensorRT中存在精度问题的算子
-		\item 在float16量化后的网络结构中搜索并排除对精度影响较大的层，使得误差下降了75\%
-		\item 对模型进行int8 QAT量化，在保证输出图像质量不变的前提下达到50\%的加速比
-		\item 项目地址：\href{https://github.com/liu-mengyang/trt-elan}{github.com/liu-mengyang/trt-elan}
+		\item 负责轧钢厂产线数据监视系统的开发工作
+		\item 基于Unity和Node.js实现了轧钢厂生产线数据在三维产线模型中的实时展示
 	\end{tightemize}
 	\sectionsep
 
@@ -224,6 +221,18 @@
 	\end{tightemize}
 	\sectionsep
 
+	\runsubsection{\bf 竞赛 TensorRT Hackathon 2022 优胜奖}
+	\descript{2022.03$\sim$2022.5}
+	\location{NVIDIA | 阿里云天池}
+	\begin{tightemize}
+		\item 基于TensorRT对语音识别模型WeNet和超分辨率模型ELAN进行float16和int8量化加速
+		\item 编写TensorRT插件实现16位浮点型BatchNorm以替换TensorRT中存在精度问题的算子
+		\item 在float16量化后的网络结构中搜索并排除对精度影响较大的层，使得误差下降了75\%
+		\item 对模型进行int8 QAT量化，在保证输出图像质量不变的前提下达到50\%的加速比
+		\item 项目地址：\href{https://github.com/liu-mengyang/trt-elan}{github.com/liu-mengyang/trt-elan}
+	\end{tightemize}
+	\sectionsep
+
 	\runsubsection{\bf 竞赛 TensorRT Hackathon 2021 队伍排名4/48}
 	\descript{2021.03$\sim$2021.5}
 	\location{NVIDIA | 阿里云天池}
@@ -232,15 +241,6 @@
 		\item 编写TensorRT插件实现16位浮点型DCNv2算子，单视频输入计算速度提升2.36倍
 		\item 将Pytorch模型参数通过API导入TensorRT中并完成对齐
 		\item 项目地址：\href{https://github.com/liu-mengyang/trt-fairmot}{github.com/liu-mengyang/trt-fairmot}
-	\end{tightemize}
-	\sectionsep
-
-	\runsubsection{\bf 横向课题 面向工业互联网的智能云端协作关键技术及系统}
-	\descript{2021.04$\sim$2021.09}
-	\location{国家重点研发计划 | 南京南钢钢铁联合有限公司 | 东南大学}
-	\begin{tightemize}
-		\item 负责轧钢厂产线数据监视系统的开发工作
-		\item 基于Unity和Node.js实现了轧钢厂生产线数据在三维产线模型中的实时展示
 	\end{tightemize}
 	\sectionsep
 
